@@ -213,6 +213,7 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.2.1</version>
@@ -255,31 +256,7 @@
         </plugins>
     </build>
 
-    <!--profiles>
-        <profile>
-            <id>quick-hosted-mode</id>
-            <activation>
-                <property>
-                    <name>hosted</name>
-                </property>
-            </activation>
-            <properties>
-                <google.webtoolkit.compileSkip>true</google.webtoolkit.compileSkip>
-                <o>true</o>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>gwt-maven-plugin</artifactId>
-                        <version>${gwt.maven}</version>
-                        <configuration>
-                            <draftCompile>true</draftCompile>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
+    <profiles>
 
         <profile>
             <id>dev</id>
@@ -288,18 +265,6 @@
             </properties>
             <build>
                 <plugins>
-
-
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>gwt-maven-plugin</artifactId>
-                        <version>${gwt.maven}</version>
-                        <configuration>
-                            <extraJvmArgs>-server -Xmx512m -XX:MaxPermSize=256M</extraJvmArgs>
-                            <optimizationLevel>9</optimizationLevel>
-
-                        </configuration>
-                    </plugin>
 
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -469,6 +434,6 @@
                 </plugins>
             </build>
         </profile>
-    </profiles-->
+    </profiles>
 
 </project>
